# Gu-a-de-ejercicios-estructura-de-datos

./: .fuse_hidden00005adc00000001  Ejercicios.cpp  README.md
Ejercicio#12/: CMakeLists.txt  cabecera.h  main.cpp
Ejercicio#17/: CMakeLists.txt
Ejercicio#22/: CMakeLists.txt  cabecera.h
Ejercicio#30/: CMakeLists.txt  main.cpp
Ejercicio#36/: main.cpp
Ejercicio#42/: cabecera.h  main.cpp
Ejercicio#48/: CMakeLists.txt  cabecera.h  main.cpp
Ejercicio#54/: definiciones.cpp  main.cpp
Ejercicio#60/: definiciones.cpp  main.cpp
Ejercicio#66/: CMakeLists.txt  definiciones.cpp  main.cpp
Ejercicio#7/: CMakeLists.txt  Definiciones.cpp  cabecera.h  mai.cpp
Ejercicio#72/: main.cpp
Ejercicio#78/: cabecera.h
Ejercicio#84/: cabecera.h  main.cpp
Ejercicio#90/: CMakeLists.txt  cabecera.h  definiciones.cpp
Ejercicio#96/: definiciones.cpp  main.cpp
Grupo_#4_100_ejercicios/: README.md
Grupo_#4_100_ejercicios/100_Ejercicios_/EJE 3/: Ejercicio 3 lis.cpp  FUNCIONES_H.txt  main.cpp
Grupo_#4_100_ejercicios/100_Ejercicios_/EJERCICIO_1/: main.cpp
Grupo_#4_100_ejercicios/100_Ejercicios_/EJERCICIO_14/: CMakeLists.txt  funciones.h  main.cpp  procedimientos.cpp
Grupo_#4_100_ejercicios/100_Ejercicios_/EJERCICIO_16/: ejercicio 16.cpp  funciones.h  main.cpp  procedimientos.cpp
Grupo_#4_100_ejercicios/100_Ejercicios_/EJERCICIO_21/: CMakeLists.txt  funciones.h  main.cpp  procedimientos.cpp
Grupo_#4_100_ejercicios/100_Ejercicios_/EJERCICIO_23/: ejercicio 23.cpp  funciones.h  main.cpp  procedimientos.cpp
Grupo_#4_100_ejercicios/100_Ejercicios_/EJERCICIO_25/: CMakeLists.txt  funciones.h  main.cpp  procedimiento.cpp
Grupo_#4_100_ejercicios/100_Ejercicios_/EJERCICIO_27/: CMakeLists.txt  funciones.h  main.cpp  procedimientos.cpp
Grupo_#4_100_ejercicios/100_Ejercicios_/EJERCICIO_29/: ejercicio 29.cpp  funciones.h  main.cpp  procedimientos (2).cpp
Grupo_#4_100_ejercicios/100_Ejercicios_/EJERCICIO_31/: CMakeLists.txt  funciones.h  main.cpp  procedimientos.cpp
Grupo_#4_100_ejercicios/100_Ejercicios_/EJERCICIO_33/: CMakeLists.txt  funciones.h  main.cpp  procedimientos.cpp
Grupo_#4_100_ejercicios/100_Ejercicios_/EJERCICIO_35/: Sin Nombre4.cpp  ejercicio 35.cpp  funciones.h  main.cpp  procedimientos.cpp
Grupo_#4_100_ejercicios/100_Ejercicios_/EJERCICIO_37/: CMakeLists.txt  funciones.h  main.cpp  procedimiento.cpp
Grupo_#4_100_ejercicios/100_Ejercicios_/EJERCICIO_39/: CMakeLists.txt  funciones.h  main.cpp  (+1 more)
Grupo_#4_100_ejercicios/100_Ejercicios_/Ejercicio#84/: CMakeLists.txt  definiciones.cpp
Grupo_#4_100_ejercicios/EJE 3/: 3.txt  procedimientos.cpp
Grupo_#4_100_ejercicios/Ejercicio#12/: definiciones.cpp
Grupo_#4_100_ejercicios/Ejercicio#17/: cabecera.h
Grupo_#4_100_ejercicios/Ejercicio#2/: CMakeLists.txt
Grupo_#4_100_ejercicios/Ejercicio#22/: main.cpp
Grupo_#4_100_ejercicios/Ejercicio#30/: cabecera.h  definiciones.cpp
Grupo_#4_100_ejercicios/Ejercicio#36/: cabecera.h
Grupo_#4_100_ejercicios/Ejercicio#42/: CMakeLists.txt  definiciones.cpp
Grupo_#4_100_ejercicios/Ejercicio#48/: definiciones.cpp
Grupo_#4_100_ejercicios/Ejercicio#54/: cabecera.h
Grupo_#4_100_ejercicios/Ejercicio#60/: CMakeLists.txt  cabecera.h
Grupo_#4_100_ejercicios/Ejercicio#72/: definiciones.cpp
Grupo_#4_100_ejercicios/Ejercicio#78/: CMakeLists.txt  definiciones.cpp
Grupo_#4_100_ejercicios/Ejercicio#96/: CMakeLists.txt
Grupo_#5_100_ejercicios/: README.md
Grupo_#5_100_ejercicios/100_Ejercicios_/Ejercicio_10/: CMakeLists.txt  funciones.h  main.cpp
(+258 files in other folders)
